css/gamePlayByPlay.css
.game-play-by-play-view {
	width: 100%;

	display: flex;
	flex-direction: column;
	gap: 15px;

	opacity: 0;
	transition: opacity 300ms ease-in-out;
}

.game-play-by-play-view.active {
	opacity: 0;
}

.game-play-by-play-view.active.filled {
	opacity: 1;
}

.game-play-by-play-item {
	padding: 10px 15px;
	margin: 0px 15dvw;
	background-color: rgba(255, 255, 255, 0.15);
	font-size: clamp(12px, max(2vw, 2.25vh), 40px);
	font-weight: bold;
	text-shadow: 0 0 7px #000;
	border-radius: 15px;

	display: flex;
	align-items: center;
}

.game-play-by-play-item.minified {
	height: 0px;
	padding: 1px;
	width: 100dvw;
	align-self: center;
	justify-content: center;
	margin: 3dvmax 0px !important;
}

.game-play-by-play-item.minified:first-child {
	margin: 4dvmax 0px 3dvmax !important;
}

.game-play-by-play-item.minified > div > div {
	background-color: #020026;
	padding: 2vmin;

	display: flex;
	justify-content: center;
	align-items: center;
}

.game-play-by-play-item.minified > div:has(div) {
	width: 100%;

	display: flex;
	justify-content: center;
	align-items: center;
}

.game-play-by-play-item-minified-image {
	height: 10vmin !important;
	-webkit-filter: none !important;
	filter: none !important;
	translate: 0px 0px !important;
	border-radius: 0% !important;
	object-fit: cover;
	overflow-clip-margin: unset;
	overflow: hidden;
	bottom: -1px;
	right: -3px;

	background-color: #020026;
	padding: 2vmin 0px 2vmin 2vmin;
}

.game-play-by-play-item-minified-image-score {
	height: 5vmin !important;
	-webkit-filter: none !important;
	filter: none !important;
	translate: 0px 0px !important;
	border-radius: 0% !important;

	background-color: #020026;
}

.game-play-by-play-item-minified-image-score:first-child {
	margin-right: 1vmin;
}

.game-play-by-play-item-minified-image-score:last-child {
	margin-left: 1vmin;
}

.game-play-by-play-item > div:has(> img) {
	width: 120px;
	margin-right: 15px;

	display: flex;
	justify-content: center;
	align-items: center;

	position: relative;
}

.game-play-by-play-item > div:first-child img {
	height: 85px;
	translate: -5px 0px;
	border-radius: 40%;

	-webkit-filter: drop-shadow(1px 1px 0 white) drop-shadow(1px -1px 0 white) drop-shadow(-1px -1px 0 white) drop-shadow(-1px 1px 0 white);
	filter: drop-shadow(1px 1px 0 white) drop-shadow(1px -1px 0 white) drop-shadow(-1px -1px 0 white) drop-shadow(-1px 1px 0 white);
}

.game-play-by-play-item:first-child {
	margin-top: 20px;
}

.game-play-by-play-item:last-child {
	margin-bottom: 20px;
}

@media (max-width: 1000px) {
	.game-play-by-play-item {
		margin: 0px 3vw;
	}
}

.game-play-by-play-item-main-text::first-letter {
	text-transform: capitalize;
}

.game-play-by-play-item-sub-text {
	color: gainsboro;

	font-size: clamp(10px, max(1.3vw, 1.6vh), 25px);
	text-shadow: 0 0 5px #000;

	margin-top: 3px;
}

.game-play-by-play-item-sub-sub-text {
	color: darkgray;

	font-size: clamp(8px, max(1.1vw, 1.4vh), 20px);
	font-weight: bold;
	text-shadow: 0 0 5px #000;

	margin-top: 3px;
}

.game-play-by-play-item-sub-image {
	position: absolute;
	height: 45px !important;
	width: 45px !important;
	object-fit: cover;
	overflow-clip-margin: unset;
	overflow: hidden;
	bottom: -1px;
	right: -3px;

	-webkit-filter: drop-shadow(1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black) drop-shadow(-1px 1px 0 black) !important;
	filter: drop-shadow(1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black) drop-shadow(-1px 1px 0 black) !important;
}

.game-play-by-play-item-sub-image-secondary {
	position: absolute;
	height: 45px !important;
	width: 45px !important;
	object-fit: cover;
	overflow-clip-margin: unset;
	overflow: hidden;
	bottom: -1px;
	left: -3px;

	-webkit-filter: drop-shadow(1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black) drop-shadow(-1px 1px 0 black) !important;
	filter: drop-shadow(1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black) drop-shadow(-1px 1px 0 black) !important;
}

.game-play-by-play-item-game-info {
	display: flex;
	align-items: center;

	margin-bottom: 3px;
}

.game-play-by-play-item-game-info-image {
	height: min(calc(35vw / 6), calc(35vh / 12));
}

.game-play-by-play-item-game-info-image:nth-child(3) {
	padding-right: 5px;
	margin-right: 7px;
	border-right: 2px solid darkgray;
}

.game-play-by-play-item-game-info-scores {
	display: inline;

	margin: 0px 4px;

	font-size: min(3.5vw, 1.75vh);
}

.game-play-by-play-item-game-info-clock {
	font-size: min(3.5vw, 1.75vh);
}

